--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <!-- header -->
     <header>
+      <a href="./index.html">WebStudio</a>
+      <!-- !!!Лого вне nav потому что в hw-08 nav будет скрыт display non!!! -->
       <nav>
-        <!-- ????? Лого в хедере находится в nav, это правильно? -->
-        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -147,19 +147,24 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
-        <!-- ????? Нужно ли адрес в футере добавлять в один список с телефоном и почтой и нужно ли делать его ссылкой (чтобы открывались карты гугл)? -->
-        <a
-          href="https://goo.gl/maps/VducrsW37EZ99G4x5"
-          target="_blank"
-          rel="noopener noreferrer"
-          >г. Киев, пр-т Леси Украинки, 26</a
-        ><br />
-        <a href="mailto:info@example.com">info@example.com</a><br />
-        <!-- ????? Правильно ли переносить строки адреса с помощью br? -->
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/VducrsW37EZ99G4x5"
+              target="_blank"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+            <!-- Prettier неудобно разрывает теги (например </a> на двух предыдущих строчках). Так и должно быть или лучше изменить настройки самого Prettier? -->
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
 </html>
-<!-- Prettier недобно разрывает теги (строки 152-153 например). Так и должно быть или лучше изменить настройки самого Prettier?
-    Если есть любые рекомендации - пишите, я буду только рад :) -->
+<!-- Q&A history
+Лого в хедере находится в nav, это правильно?
+Cкринридер озвучивает текст из атрибута alt? Если да, то как правильно вписать атрибут lang="en" в alt. Через span? Или можно сделать два alt на одну картинку?
+Нужно ли адрес в футере добавлять в один список с телефоном и почтой и нужно ли делать его ссылкой (чтобы открывались карты гугл)?-->
