--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- header -->
@@ -32,8 +33,7 @@
       </section>
       <!-- advantages -->
       <section>
-        <!-- !!!Скрыть h2 правильно, не hidden!!! -->
-        <h2>Наши преимущества</h2>
+        <h2 class="visually-hidden">Наши преимущества</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
