--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <!-- header -->
     <header>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html">Web<span>Studio</span></a>
       <!-- !!!Лого вне nav потому что в hw-08 nav будет скрыт display non!!! -->
       <nav>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
@@ -145,7 +145,7 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html">Web<span>Studio</span></a>
       <address>
         <ul>
           <li>
@@ -166,5 +166,7 @@
 </html>
 <!-- Q&A history
 Лого в хедере находится в nav, это правильно?
-Cкринридер озвучивает текст из атрибута alt? Если да, то как правильно вписать атрибут lang="en" в alt. Через span? Или можно сделать два alt на одну картинку?
-Нужно ли адрес в футере добавлять в один список с телефоном и почтой и нужно ли делать его ссылкой (чтобы открывались карты гугл)?-->
+Cкринридер озвучивает текст из атрибута alt?
+Если в alt ечть текст на разных языках, то как правильно вписать атрибут lang="" в alt. Через span? Или можно сделать два alt на одну картинку и прописать lang="" для текста на неосновном языке страницы?
+Нужно ли адрес в футере добавлять в один список с телефоном и почтой и нужно ли делать его ссылкой (чтобы открывались карты гугл)?
+Prettier неудобно разрывает теги (например </a> в footer->address->ul->li). Так и должно быть или лучше изменить настройки самого Prettier?-->
