--- a/portfolio.html
+++ b/portfolio.html
@@ -38,63 +38,108 @@
         <ul>
           <li>
             <a href=""
-              ><img src="" alt="" width="370" height="294" />
+              ><img
+                src="./images/portfolio.html/examples/tekhnokryak.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
               <h3>Технокряк</h3>
               <p>Веб-сайт</p></a
             >
           </li>
           <li>
             <a href=""
-              ><img src="" alt="" width="370" height="294" />
+              ><img
+                src="./images/portfolio.html/examples/poster-new-orlean-vs-golden-star.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
               <h3>Постер New Orlean vs Golden Star</h3>
               <p>Дизайн</p></a
             >
           </li>
           <li>
             <a href=""
-              ><img src="" alt="" width="370" height="294" />
+              ><img
+                src="./images/portfolio.html/examples/restoran-seafood.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
               <h3>Ресторан Seafood</h3>
               <p>Приложение</p></a
             >
           </li>
           <li>
             <a href=""
-              ><img src="" alt="" width="370" height="294" />
+              ><img
+                src="./images/portfolio.html/examples/proekt-prime.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
               <h3>Проект Prime</h3>
               <p>Маркетинг</p></a
             >
           </li>
           <li>
             <a href=""
-              ><img src="" alt="" width="370" height="294" />
+              ><img
+                src="./images/portfolio.html/examples/proekt-boxes.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
               <h3>Проект Boxes</h3>
               <p>Приложение</p></a
             >
           </li>
           <li>
             <a href=""
-              ><img src="" alt="" width="370" height="294" />
+              ><img
+                src="./images/portfolio.html/examples/inspiration-has-no-borders.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
               <h3>Inspiration has no Borders</h3>
               <p>Веб-сайт</p></a
             >
           </li>
           <li>
             <a href=""
-              ><img src="" alt="" width="370" height="294" />
+              ><img
+                src="./images/portfolio.html/examples/izdaniye-limited-edition.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
               <h3>Издание Limited Edition</h3>
               <p>Дизайн</p></a
             >
           </li>
           <li>
             <a href=""
-              ><img src="" alt="" width="370" height="294" />
+              ><img
+                src="./images/portfolio.html/examples/proekt-lab.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
               <h3>Проект LAB</h3>
               <p>Маркетинг</p></a
             >
           </li>
           <li>
             <a href=""
-              ><img src="" alt="" width="370" height="294" />
+              ><img
+                src="./images/portfolio.html/examples/growing-business.jpg"
+                alt=""
+                width="370"
+                height="294"
+              />
               <h3>Growing Business</h3>
               <p>Приложение</p></a
             >
