--- a/index.html
+++ b/index.html
@@ -9,56 +9,90 @@
   </head>
   <body>
     <!-- header -->
-    <header>
-      <a href="./index.html">Web<span>Studio</span></a>
+    <header class="header">
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-accent-header">Studio</span></a
+      >
       <!-- !!!Лого вне nav потому что в hw-08 nav будет скрыт display non!!! -->
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+      <nav class="nav">
+        <ul class="list-nav-header">
+          <li class="list-nav-header-item">
+            <a
+              class="link list-nav-header-item-link current"
+              href="./index.html"
+              >Студия</a
+            >
+          </li>
+          <li class="list-nav-header-item">
+            <a class="link list-nav-header-item-link" href="./portfolio.html"
+              >Портфолио</a
+            >
+          </li>
+          <li class="list-nav-header-item">
+            <a class="link list-nav-header-item-link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list-contacts-header">
+        <li class="list-contacts-header-item">
+          <a
+            class="link list-contacts-header-item-link"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="list-contacts-header-item">
+          <a
+            class="link list-contacts-header-item-link"
+            href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <!-- main information -->
-    <main>
-      <!-- hero section -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+    <main class="main">
+      <!-- hero  -->
+      <section class="section-hero">
+        <h1 class="title-section title-section-hero">
+          Эффективные решения для вашего бизнеса
+        </h1>
+        <button class="button-section-hero" type="button">
+          Заказать услугу
+        </button>
       </section>
       <!-- advantages -->
-      <section>
-        <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+      <section class="section-advantages">
+        <h2 class="title-section visually-hidden">Наши преимущества</h2>
+        <ul class="list-section-advantages">
+          <li class="list-section-advantages-item">
+            <h3 class="list-section-advantages-item-title">
+              Внимание к деталям
+            </h3>
+            <p class="list-section-advantages-item-description">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="list-section-advantages-item">
+            <h3 class="list-section-advantages-item-title">Пунктуальность</h3>
+            <p class="list-section-advantages-item-description">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="list-section-advantages-item">
+            <h3 class="list-section-advantages-item-title">Планирование</h3>
+            <p class="list-section-advantages-item-description">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
+          <li class="list-section-advantages-item">
+            <h3 class="list-section-advantages-item-title">
+              Современные технологии
+            </h3>
+            <p class="list-section-advantages-item-description">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -66,10 +100,11 @@
         </ul>
       </section>
       <!-- activities -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <section class="section-activities">
+        <h2 class="title-section">Чем мы занимаемся</h2>
+        <ul class="list-section-activities">
+          <li class="list-section-activities-item">
+            <!-- К изображениям классы применяют? -->
             <img
               src="./images/index.html/activities/code.jpg"
               alt="Специалист пишет код"
@@ -77,7 +112,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="list-section-activities-item">
             <img
               src="./images/index.html/activities/adaptive-markup.jpg"
               alt="Специалист выполняет адаптирует сайт для разных устройств"
@@ -85,7 +120,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="list-section-activities-item">
             <img
               src="./images/index.html/activities/design.jpg"
               alt="Специалист подбирает цветовую схему"
@@ -96,10 +131,10 @@
         </ul>
       </section>
       <!-- team -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="section-team">
+        <h2 class="title-section">Наша команда</h2>
+        <ul class="list-section-team">
+          <li class="list-section-team-item">
             <!-- ????? Скринридер озвучивает текст из атрибута alt? Если да, то покажите, плиз, как правильно вписать атрибут lang="en" в alt. Через span не вышло. Или можно сделать два alt на одну картинку?-->
             <img
               src="./images/index.html/team/igor-demianenko.jpg"
@@ -107,49 +142,60 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="list-section-team-item-title">Игорь Демьяненко</h3>
+            <p class="list-section-team-item-description" lang="en">
+              Product Designer
+            </p>
           </li>
-          <li>
+          <li class="list-section-team-item">
             <img
               src="./images/index.html/team/olga-repina.jpg"
               alt="Ольга Репина, Frontend Developer"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="list-section-team-item-title">Ольга Репина</h3>
+            <p class="list-section-team-item-description" lang="en">
+              Frontend Developer
+            </p>
           </li>
-          <li>
+          <li class="list-section-team-item">
             <img
               src="./images/index.html/team/nikolay-tarasov.jpg"
               alt="Николай Тарасов, Marketing"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="list-section-team-item-title">Николай Тарасов</h3>
+            <p class="list-section-team-item-description" lang="en">
+              Marketing
+            </p>
           </li>
-          <li>
+          <li class="list-section-team-item">
             <img
               src="./images/index.html/team/mikhail-ermakov.jpg"
               alt="Михаил Ермаков, UI Designer"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="list-section-team-item-title">Михаил Ермаков</h3>
+            <p class="list-section-team-item-description" lang="en">
+              UI Designer
+            </p>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
-    <footer>
-      <a href="./index.html">Web<span>Studio</span></a>
-      <address>
-        <ul>
-          <li>
+    <footer class="footer">
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-accent-footer">Studio</span></a
+      >
+      <address class="address">
+        <ul class="list-address">
+          <li class="list-address-item">
             <a
+              class="link link-contacts-footer-address"
               href="https://goo.gl/maps/VducrsW37EZ99G4x5"
               target="_blank"
               rel="noopener noreferrer"
@@ -157,8 +203,16 @@
             >
             <!-- Prettier неудобно разрывает теги (например </a> на двух предыдущих строчках). Так и должно быть или лучше изменить настройки самого Prettier? -->
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+          <li class="list-address-item">
+            <a class="link link-contacts-footer" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li class="list-address-item">
+            <a class="link link-contacts-footer" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
@@ -169,4 +223,5 @@
 Cкринридер озвучивает текст из атрибута alt?
 Если в alt ечть текст на разных языках, то как правильно вписать атрибут lang="" в alt. Через span? Или можно сделать два alt на одну картинку и прописать lang="" для текста на неосновном языке страницы?
 Нужно ли адрес в футере добавлять в один список с телефоном и почтой и нужно ли делать его ссылкой (чтобы открывались карты гугл)?
-Prettier неудобно разрывает теги (например </a> в footer->address->ul->li). Так и должно быть или лучше изменить настройки самого Prettier?-->
+Prettier неудобно разрывает теги (например </a> в footer->address->ul->li). Так и должно быть или лучше изменить настройки самого Prettier?
+Применяют ли классы к изображениям?-->
