--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </li>
       </ul>
     </header>
-    <!-- main information -->
+    <!-- main -->
     <main class="main">
       <!-- hero  -->
       <section class="section-hero">
