--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,14 @@
       <nav class="nav">
         <ul class="list-nav-header">
           <li class="list-nav-header-item">
-            <a
-              class="link list-nav-header-item-link current"
-              href="./index.html"
+            <a class="link list-nav-header-item-link" href="./index.html"
               >Студия</a
             >
           </li>
           <li class="list-nav-header-item">
-            <a class="link list-nav-header-item-link" href="./portfolio.html"
+            <a
+              class="link list-nav-header-item-link current"
+              href="./portfolio.html"
               >Портфолио</a
             >
           </li>
@@ -55,7 +55,7 @@
         </li>
       </ul>
     </header>
-    <!-- maim information -->
+    <!-- maim -->
     <main class="main">
       <!-- examples -->
       <section class="section-examples">
