styles: portfolio.html
styles.css

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,22 +59,34 @@
     <main class="main">
       <!-- examples -->
       <section class="section-examples">
-        <h2 class="title-section title-section-examples">Меню видов работ</h2>
+        <h2 class="title-section title-section-examples visually-hidden">
+          Меню видов работ
+        </h2>
         <ul class="list-section-examples-button">
           <li class="list-section-examples-button-item">
-            <button type="button">Все</button>
+            <button class="button-section-examples current" type="button">
+              Все
+            </button>
           </li>
           <li class="list-section-examples-button-item">
-            <button type="button">Веб-сайты</button>
+            <button class="button-section-examples" type="button">
+              Веб-сайты
+            </button>
           </li>
           <li class="list-section-examples-button-item">
-            <button type="button">Приложения</button>
+            <button class="button-section-examples" type="button">
+              Приложения
+            </button>
           </li>
           <li class="list-section-examples-button-item">
-            <button type="button">Дизайн</button>
+            <button class="button-section-examples" type="button">
+              Дизайн
+            </button>
           </li>
           <li class="list-section-examples-button-item">
-            <button type="button">Маркетинг</button>
+            <button class="button-section-examples" type="button">
+              Маркетинг
+            </button>
           </li>
         </ul>
         <ul class="list-section-examples-example">
