--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Вопросы легко найти введя в поиск: ????? -->
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -59,7 +60,7 @@
     <main class="main">
       <!-- hero  -->
       <section class="section-hero">
-        <h1 class="title-section title-section-hero">
+        <h1 class="title-section-hero">
           Эффективные решения для вашего бизнеса
         </h1>
         <button class="button-section-hero" type="button">
@@ -109,7 +110,7 @@
         <h2 class="title-section">Чем мы занимаемся</h2>
         <ul class="list-section-activities">
           <li class="list-section-activities-item">
-            <!-- К изображениям классы применяют? -->
+            <!-- ????? К изображениям применяют классы?-->
             <img
               src="./images/index.html/activities/code.jpg"
               alt="Специалист пишет код"
