--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Вопросы легко найти введя в поиск: ????? -->
+<!-- Вопросы легко найти введя в поиск: ????? (Всё что отмечено по другому - старые вопросы или личные комментарии)-->
 <!DOCTYPE html>
 <html lang="ru">
   <head>
