--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студия</title>
+    <title>Web Studio 2.1.2.</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       rel="stylesheet"
@@ -16,9 +16,10 @@
   <body>
     <!-- header -->
     <header class="header">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-accent-header">Studio</span></a
-      >
+      <a class="logo" href="./index.html"></a>
+        Web
+        <span class="logo-accent-header">Studio</span>
+      </a>
       <!-- !!!Лого вне nav потому что в hw-08 nav будет скрыт display non!!! -->
       <nav class="nav">
         <ul class="list-nav-header">
@@ -26,13 +27,14 @@
             <a
               class="link list-nav-header-item-link current"
               href="./index.html"
-              >Студия</a
             >
+              Студия
+            </a>
           </li>
           <li class="list-nav-header-item">
-            <a class="link list-nav-header-item-link" href="./portfolio.html"
-              >Портфолио</a
-            >
+            <a class="link list-nav-header-item-link" href="./portfolio.html">
+              Портфолио
+            </a>
           </li>
           <li class="list-nav-header-item">
             <a class="link list-nav-header-item-link" href="">Контакты</a>
@@ -44,15 +46,17 @@
           <a
             class="link list-contacts-header-item-link"
             href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
           >
+            info@devstudio.com
+          </a>
         </li>
         <li class="list-contacts-header-item">
           <a
             class="link list-contacts-header-item-link"
             href="tel:+380961111111"
-            >+38 096 111 11 11</a
           >
+            +38 096 111 11 11
+          </a>
         </li>
       </ul>
     </header>
@@ -194,9 +198,10 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-accent-footer">Studio</span></a
-      >
+      <a class="logo" href="./index.html">
+        Web
+        <span class="logo-accent-footer">Studio</span>
+      </a>
       <address class="address">
         <ul class="list-address">
           <li class="list-address-item">
@@ -205,19 +210,20 @@
               href="https://goo.gl/maps/VducrsW37EZ99G4x5"
               target="_blank"
               rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
             >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
             <!-- Prettier неудобно разрывает теги (например </a> на двух предыдущих строчках). Так и должно быть или лучше изменить настройки самого Prettier? -->
           </li>
           <li class="list-address-item">
-            <a class="link link-contacts-footer" href="mailto:info@example.com"
-              >info@example.com</a
-            >
+            <a class="link link-contacts-footer" href="mailto:info@example.com">
+              info@example.com
+            </a>
           </li>
           <li class="list-address-item">
-            <a class="link link-contacts-footer" href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
+            <a class="link link-contacts-footer" href="tel:+380991111111">
+              +38 099 111 11 11
+            </a>
           </li>
         </ul>
       </address>
