--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студия</title>
+    <title>Portfolio 2.1.2.</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       rel="stylesheet"
@@ -16,23 +16,25 @@
   <body>
     <!-- header -->
     <header class="header">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-accent-header">Studio</span></a
-      >
+      <a class="logo" href="./index.html"></a>
+        Web
+        <span class="logo-accent-header">Studio</span>
+      </a>
       <!-- !!!Лого вне nav потому что в hw-08 nav будет скрыт display non!!! -->
       <nav class="nav">
         <ul class="list-nav-header">
           <li class="list-nav-header-item">
-            <a class="link list-nav-header-item-link" href="./index.html"
-              >Студия</a
-            >
+            <a class="link list-nav-header-item-link" href="./index.html">
+              Студия
+            </a>
           </li>
           <li class="list-nav-header-item">
             <a
               class="link list-nav-header-item-link current"
               href="./portfolio.html"
-              >Портфолио</a
             >
+              Портфолио
+            </a>
           </li>
           <li class="list-nav-header-item">
             <a class="link list-nav-header-item-link" href="">Контакты</a>
@@ -44,15 +46,17 @@
           <a
             class="link list-contacts-header-item-link"
             href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
           >
+            info@devstudio.com
+          </a>
         </li>
         <li class="list-contacts-header-item">
           <a
             class="link list-contacts-header-item-link"
             href="tel:+380961111111"
-            >+38 096 111 11 11</a
           >
+            +38 096 111 11 11
+          </a>
         </li>
       </ul>
     </header>
@@ -92,8 +96,8 @@
         </ul>
         <ul class="list-section-examples-example">
           <li class="list-section-examples-example-item">
-            <a class="list-section-examples-example-item-link" href=""
-              ><img
+            <a class="list-section-examples-example-item-link" href="">
+              <img
                 src="./images/portfolio.html/examples/tekhnokryak.jpg"
                 alt=""
                 width="370"
@@ -104,12 +108,12 @@
               </h3>
               <p class="list-section-examples-example-item-description">
                 Веб-сайт
-              </p></a
-            >
+              </p>
+            </a>
           </li>
           <li class="list-section-examples-example-item">
-            <a class="list-section-examples-example-item-link" href=""
-              ><img
+            <a class="list-section-examples-example-item-link" href="">
+              <img
                 src="./images/portfolio.html/examples/poster-new-orlean-vs-golden-star.jpg"
                 alt=""
                 width="370"
@@ -120,12 +124,12 @@
               </h3>
               <p class="list-section-examples-example-item-description">
                 Дизайн
-              </p></a
-            >
+              </p>
+            </a>
           </li>
           <li class="list-section-examples-example-item">
-            <a class="list-section-examples-example-item-link" href=""
-              ><img
+            <a class="list-section-examples-example-item-link" href="">
+              <img
                 src="./images/portfolio.html/examples/restoran-seafood.jpg"
                 alt=""
                 width="370"
@@ -136,12 +140,12 @@
               </h3>
               <p class="list-section-examples-example-item-description">
                 Приложение
-              </p></a
-            >
+              </p>
+            </a>
           </li>
           <li class="list-section-examples-example-item">
-            <a class="list-section-examples-example-item-link" href=""
-              ><img
+            <a class="list-section-examples-example-item-link" href="">
+              <img
                 src="./images/portfolio.html/examples/proekt-prime.jpg"
                 alt=""
                 width="370"
@@ -152,12 +156,12 @@
               </h3>
               <p class="list-section-examples-example-item-description">
                 Маркетинг
-              </p></a
-            >
+              </p>
+            </a>
           </li>
           <li class="list-section-examples-example-item">
-            <a class="list-section-examples-example-item-link" href=""
-              ><img
+            <a class="list-section-examples-example-item-link" href="">
+              <img
                 src="./images/portfolio.html/examples/proekt-boxes.jpg"
                 alt=""
                 width="370"
@@ -168,12 +172,12 @@
               </h3>
               <p class="list-section-examples-example-item-description">
                 Приложение
-              </p></a
-            >
+              </p>
+            </a>
           </li>
           <li class="list-section-examples-example-item">
-            <a class="list-section-examples-example-item-link" href=""
-              ><img
+            <a class="list-section-examples-example-item-link" href="">
+              <img
                 src="./images/portfolio.html/examples/inspiration-has-no-borders.jpg"
                 alt=""
                 width="370"
@@ -184,12 +188,12 @@
               </h3>
               <p class="list-section-examples-example-item-description">
                 Веб-сайт
-              </p></a
-            >
+              </p>
+            </a>
           </li>
           <li class="list-section-examples-example-item">
-            <a class="list-section-examples-example-item-link" href=""
-              ><img
+            <a class="list-section-examples-example-item-link" href="">
+              <img
                 src="./images/portfolio.html/examples/izdaniye-limited-edition.jpg"
                 alt=""
                 width="370"
@@ -200,12 +204,12 @@
               </h3>
               <p class="list-section-examples-example-item-description">
                 Дизайн
-              </p></a
-            >
+              </p>
+            </a>
           </li>
           <li class="list-section-examples-example-item">
-            <a class="list-section-examples-example-item-link" href=""
-              ><img
+            <a class="list-section-examples-example-item-link" href="">
+              <img
                 src="./images/portfolio.html/examples/proekt-lab.jpg"
                 alt=""
                 width="370"
@@ -216,12 +220,12 @@
               </h3>
               <p class="list-section-examples-example-item-description">
                 Маркетинг
-              </p></a
-            >
+              </p>
+            </a>
           </li>
           <li class="list-section-examples-example-item">
-            <a class="list-section-examples-example-item-link" href=""
-              ><img
+            <a class="list-section-examples-example-item-link" href="">
+              <img
                 src="./images/portfolio.html/examples/growing-business.jpg"
                 alt=""
                 width="370"
@@ -232,17 +236,18 @@
               </h3>
               <p class="list-section-examples-example-item-description">
                 Приложение
-              </p></a
-            >
+              </p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-accent-footer">Studio</span></a
-      >
+      <a class="logo" href="./index.html">
+        Web
+        <span class="logo-accent-footer">Studio</span>
+      </a>
       <address class="address">
         <ul class="list-address">
           <li class="list-address-item">
@@ -251,18 +256,19 @@
               href="https://goo.gl/maps/VducrsW37EZ99G4x5"
               target="_blank"
               rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
             >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
           </li>
           <li class="list-address-item">
-            <a class="link link-contacts-footer" href="mailto:info@example.com"
-              >info@example.com</a
-            >
+            <a class="link link-contacts-footer" href="mailto:info@example.com">
+              info@example.com
+            </a>
           </li>
           <li class="list-address-item">
-            <a class="link link-contacts-footer" href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
+            <a class="link link-contacts-footer" href="tel:+380991111111">
+              +38 099 111 11 11
+            </a>
           </li>
         </ul>
       </address>
